--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,9 @@
 						<label for="username">Usuário</label>
 						<input id="username" name="username"  class="form-control" placeholder="usuário" autofocus="autofocus">
 					</div>
+					
+					
+					<!--<script>window.stop();</script>-->
 
 					<div class="form-group">
 						<label for="password">Senha</label>
